--- a/SpringBoot/bootstrap-web/src/main/resources/templates/emp/add.html
+++ b/SpringBoot/bootstrap-web/src/main/resources/templates/emp/add.html
@@ -10,10 +10,10 @@
 
 		<title>Dashboard Template for Bootstrap</title>
 		<!-- Bootstrap core CSS -->
-		<link href="asserts/css/bootstrap.min.css" rel="stylesheet">
+		<link href="asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.css}" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
-		<link href="asserts/css/dashboard.css" rel="stylesheet">
+		<link href="asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
 		<style type="text/css">
 			/* Chart.js */
 			
@@ -50,40 +50,42 @@
 				<div th:replace="/commons/bar::#sidebar(activeUri='emps')"></div>
 
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<h2><a href="emp" th:href="@{/emp}" class="btn btn-sm btn-success">添加员工</a></h2>
-					<div class="table-responsive">
-						<table class="table table-striped table-sm">
-							<thead>
-								<tr>
-									<th>#</th>
-									<th>lastName</th>
-									<th>email</th>
-									<th>gender</th>
-									<th>department</th>
-									<th>birth</th>
-									<th>Operator</th>
-								</tr>
-							</thead>
-							<tbody>
-							    <tr th:each="emp:${emps}">
-									<td th:text="${emp.id}"></td>
-									<td>[[${emp.lastName}]]</td>
-									<td th:text="${emp.email}"></td>
-									<td th:text="${emp.gender}!=0?'男':'女'"></td>
-									<td th:text="${emp.department.departmentName}"></td>
-									<td th:text="${#dates.format(emp.birth,'yyyy-MM-dd HH:mm:ss')}"></td>
-									<td>
-										<a th:href="@{/emp/}+${emp.id}" class="btn btn-sm btn-primary">编辑</a>
-										<button th:attr="del_uri=@{/emp/}+${emp.id}" type="submit" class="btn btn-sm btn-danger deleteBtn">删除</button>
-									</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
+					<form th:action="@{/emp}" method="post">
+						<input type="hidden" name="id" th:value="${emp.id}" th:if="${emp!=null}">
+						<input type="hidden" name="_method" value="put" th:if="${emp!=null}">
+						<div class="form-group">
+							<label>LastName</label>
+							<input th:value="${emp!=null}?${emp.lastName}" name="lastName" type="text" class="form-control" placeholder="zhangsan" >
+						</div>
+						<div class="form-group">
+							<label>Email</label>
+							<input th:value="${emp!=null}?${emp.email}" name="email" type="email" class="form-control" placeholder="zhangsan@atguigu.com" >
+						</div>
+						<div class="form-group">
+							<label>Gender</label><br/>
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" name="gender" value="1" th:checked="${emp!=null}?${emp.gender==1}">
+								<label class="form-check-label">男</label>
+							</div>
+							<div class="form-check form-check-inline">
+								<input class="form-check-input" type="radio" name="gender" value="0" th:checked="${emp!=null}?${emp.gender==0}">
+								<label class="form-check-label">女</label>
+							</div>
+						</div>
+						<div class="form-group">
+							<label>department</label>
+							<!--提交的是部门的id-->
+							<select class="form-control" name="department.id">
+								<option th:each="dept:${depts}" th:selected="${emp!=null}?${dept.id==emp.department.id}" th:value="${dept.id}">[[${dept.departmentName}]]</option>
+							</select>
+						</div>
+						<div class="form-group">
+							<label>Birth</label>
+							<input th:value="${emp!=null}?${#dates.format(emp.birth,'yyyy-MM-dd')}" name="birth" type="text" class="form-control" placeholder="zhangsan">
+						</div>
+						<button type="submit" class="btn btn-primary" th:text="${emp!=null}?'修改':'添加'"></button>
+					</form>
 				</main>
-				<form id="deleteEmpForm" method="post">
-					<input type="hidden" name="_method" value="delete">
-				</form>
 			</div>
 		</div>
 
@@ -99,11 +101,7 @@
 		<script>
 			feather.replace()
 		</script>
-		<script>
-			$(".deleteBtn").click(function(){
-			    $("#deleteEmpForm").attr("action",$(this).attr("del_uri")).submit();
-			});
-		</script>
+
 		<!-- Graphs -->
 		<script type="text/javascript" src="asserts/js/Chart.min.js"></script>
 		<script>
