--- a/SpringBoot/bootstrap-web/src/main/resources/templates/error/5xx.html
+++ b/SpringBoot/bootstrap-web/src/main/resources/templates/error/5xx.html
@@ -55,6 +55,7 @@
 					<h3>message:[[${message}]]</h3>
 					<h3>error:[[${error}]]</h3>
 					<h5>errors:[[${errors}]]</h5>
+					<h5>code:[[${ext.code}]]</h5>
 					<h5>company:[[${company}]]</h5>
 				</main>
 			</div>
